ui: add Hashnode articles link to nav

--- a/index.html
+++ b/index.html
@@ -498,6 +498,8 @@
         
         <a href="https://www.linkedin.com/in/yussef-a-24088328a/" target="_blank" class="nav-item" style="font-weight: bold;">LINKEDIN</a>
         <a href="https://github.com/attiayoussef-TA" target="_blank" class="nav-item" style="font-weight: bold;">GITHUB</a>
+        <a href="https://youssefattia.hashnode.dev/" target="_blank" class="nav-item" style="font-weight: bold;">ARTICLES</a>
+
         
         <span class="nav-sep">|</span>
 
